# induction-vs-instruction

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  REPOMAP.md  justfile  pyproject.toml  repomap.txt  run.py
.claude/: napkin.md  settings.local.json
configs/: behavioral_classify_fixed.yaml  behavioral_classify_question.yaml  behavioral_dynamic_conditions.yaml  behavioral_static_conditions.yaml  behavioral_variety.yaml  example.yaml  model_reasoning_test.yaml  models.yaml  models_anthropic.yaml  models_reasoning.yaml  prediction_dynamic_conditions.yaml  prediction_static_conditions.yaml
data/: artificial_analysis_models.json  model_capability_scores.json  questions_factual.json  questions_programming.json  questions_subjective.json
docs/: Self-Prediction and preference under internal conflict in LLMs.md  full-implementation-description.md  full-implementation-plan.md  instruction-acknowledgment-options.md  reasoning_approach.md  reporting-plan.md
notebooks/: behavioral_analysis.qmd  behavioral_vs_prediction_analysis.qmd  prediction_analysis.qmd  protocol1_analysis.qmd  protocol2_analysis.qmd
paper/: CHANGELOG.md  TODOS.md  articles.bib  arxiv.sty  arxiv.tex  build_arxiv.sh  colm2026_conference.bib  colm2026_conference.tex  main.tex
scripts/: deploy_olmo_modal.py  extract_paper_stats.py  generate_hardcoded_responses.py  generate_report_from_config.py  plot_hint_effect.py  prepare_viz_data.py  repomap.py  rescore_multijudge.py  summarize_evals.py  viz_helpers.py
src/: __init__.py  config.py  plotting_utils.py
src/tasks/: __init__.py  (+2 more)
(+100 files in other folders)
