[project]
name = "induction-vs-instruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "altair>=6.0.0",
    "datasets>=4.4.1",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "inspect-ai>=0.3.177",
    "inspect-viz>=0.3.5",
    "kaleido>=1.2.0",
    "langdetect>=1.0.9",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "nbconvert>=7.16.6",
    "neuronpedia>=1.2.0",
    "nnsight>=0.5.13",
    "numpy>=2.3.5",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "plotnine>=0.15.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyobsplot>=0.5.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "quarto-cli>=1.8.27",
    "ruff>=0.14.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "vl-convert-python>=1.9.0.post1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
